--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-minversion=1.6.1
+minversion=1.6.7
 envlist =
     py26-1.4,
     py26-1.5,
@@ -7,10 +7,13 @@ envlist =
     py27-1.4,
     py27-1.5,
     py27-1.6,
+    py27-1.7,
     py33-1.5,
     py33-1.6,
+    py33-1.7,
     pypy-1.5,
     pypy-1.6,
+    pypy-1.7,
     ;py27-trunk,
     ;py33-trunk,
     ;pypy-trunk
@@ -23,40 +26,46 @@ commands =
 basepython = python2.6
 usedevelop = True
 deps =
-    Django == 1.4.10
+    Django == 1.4.15
     argparse == 1.1
 
 [testenv:py26-1.5]
 basepython = python2.6
 usedevelop = True
 deps =
-    Django == 1.5.5
+    Django == 1.5.10
     argparse == 1.1
 
 [testenv:py26-1.6]
 basepython = python2.6
 usedevelop = True
 deps =
-    Django == 1.6.1
+    Django == 1.6.7
     argparse == 1.1
 
 [testenv:py27-1.4]
 basepython = python2.7
 usedevelop = True
 deps =
-    Django == 1.4.10
+    Django == 1.4.15
 
 [testenv:py27-1.5]
 basepython = python2.7
 usedevelop = True
 deps =
-    Django == 1.5.5
+    Django == 1.5.10
 
 [testenv:py27-1.6]
 basepython = python2.7
 usedevelop = True
 deps =
-    Django == 1.6.1
+    Django == 1.6.7
+
+[testenv:py27-1.7]
+basepython = python2.7
+usedevelop = True
+deps =
+    Django == 1.7
 
 [testenv:py27-trunk]
 basepython = python2.7
@@ -68,13 +77,19 @@ deps =
 basepython = python3.3
 usedevelop = True
 deps =
-    Django == 1.5.5
+    Django == 1.5.10
 
 [testenv:py33-1.6]
 basepython = python3.3
 usedevelop = True
 deps =
-    Django == 1.6.1
+    Django == 1.6.7
+
+[testenv:py33-1.7]
+basepython = python3.3
+usedevelop = True
+deps =
+    Django == 1.7
 
 [testenv:py33-trunk]
 basepython = python3.3
@@ -86,13 +101,19 @@ deps =
 basepython = pypy
 usedevelop = True
 deps =
-    Django == 1.5.5
+    Django == 1.5.10
 
 [testenv:pypy-1.6]
 basepython = pypy
 usedevelop = True
 deps =
-    Django == 1.6.1
+    Django == 1.6.7
+
+[testenv:pypy-1.7]
+basepython = pypy
+usedevelop = True
+deps =
+    Django == 1.7
 
 [testenv:pypy-trunk]
 basepython = pypy
