--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,29 @@
-[pep8]
-max-line-length = 81
-ignore = E123
+[pytest]
+norecursedirs=.* *.egg .svn _build src bin lib local include
+testpaths=menuhin/tests
+python_files=test_*.py
+addopts=-vvv --showlocals --cov-report html:htmlcov --cov-report term-missing:skip-covered --cov-config .coveragerc --cov menuhin
+
+[metadata]
+license-file = LICENSE
+
+[wheel]
+universal = 1
+
+[flake8]
+max-line-length = 80
+
+[check-manifest]
+ignore =
+    .travis.yml
+    .bumpversion.cfg
+    .idea
+    .tox
+    __pycache__
+    bin
+    include
+    lib
+    local
+    share
+    .Python
+    htmlcov
