--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,28 @@
 language: python
+python: 3.5
+sudo: false
 
 notifications:
   email: false
 
-env:
-  - TOX_ENV=py26-1.4
-  - TOX_ENV=py26-1.5
-  - TOX_ENV=py26-1.6
-  - TOX_ENV=py27-1.4
-  - TOX_ENV=py27-1.5
-  - TOX_ENV=py27-1.6
-  - TOX_ENV=py27-1.7
-  - TOX_ENV=py33-1.5
-  - TOX_ENV=py33-1.6
-  - TOX_ENV=py33-1.7
-  - TOX_ENV=pypy-1.5
-  - TOX_ENV=pypy-1.6
-  - TOX_ENV=pypy-1.7
-
 install:
-  - pip install --upgrade tox
+  - pip install --upgrade pip setuptools tox
 
+cache:
+  directories:
+    - $HOME/.cache/pip
+    
+env:
+  - TOX_ENV=py27-dj18
+  - TOX_ENV=py27-dj19
+  - TOX_ENV=py27-dj110
+  - TOX_ENV=py33-dj18
+  - TOX_ENV=py34-dj18
+  - TOX_ENV=py34-dj19
+  - TOX_ENV=py34-dj110
+  - TOX_ENV=py35-dj18
+  - TOX_ENV=py35-dj19
+  - TOX_ENV=py35-dj110
+  
 script:
   - tox -e $TOX_ENV
