--- a/tox.ini
+++ b/tox.ini
@@ -1,122 +1,20 @@
 [tox]
-minversion=1.6.7
-envlist =
-    py26-1.4,
-    py26-1.5,
-    py26-1.6,
-    py27-1.4,
-    py27-1.5,
-    py27-1.6,
-    py27-1.7,
-    py33-1.5,
-    py33-1.6,
-    py33-1.7,
-    pypy-1.5,
-    pypy-1.6,
-    pypy-1.7,
-    ;py27-trunk,
-    ;py33-trunk,
-    ;pypy-trunk
-
+minversion=2.2
+envlist = py27-dj{18,19,110},
+          py33-dj18,
+          py34-dj{18,19,110},
+          py35-dj{18,19,110},
 [testenv]
 commands =
-    python -B -tt -W ignore setup.py test
+    python -B -R -tt -W ignore setup.py test
 
-[testenv:py26-1.4]
-basepython = python2.6
-usedevelop = True
-deps =
-    Django == 1.4.15
-    argparse == 1.1
+basepython =
+    py27: python2.7
+    py33: python3.3
+    py34: python3.4
+    py35: python3.5
 
-[testenv:py26-1.5]
-basepython = python2.6
-usedevelop = True
 deps =
-    Django == 1.5.10
-    argparse == 1.1
-
-[testenv:py26-1.6]
-basepython = python2.6
-usedevelop = True
-deps =
-    Django == 1.6.7
-    argparse == 1.1
-
-[testenv:py27-1.4]
-basepython = python2.7
-usedevelop = True
-deps =
-    Django == 1.4.15
-
-[testenv:py27-1.5]
-basepython = python2.7
-usedevelop = True
-deps =
-    Django == 1.5.10
-
-[testenv:py27-1.6]
-basepython = python2.7
-usedevelop = True
-deps =
-    Django == 1.6.7
-
-[testenv:py27-1.7]
-basepython = python2.7
-usedevelop = True
-deps =
-    Django == 1.7
-
-[testenv:py27-trunk]
-basepython = python2.7
-usedevelop = True
-deps =
-    https://github.com/django/django/archive/master.zip
-
-[testenv:py33-1.5]
-basepython = python3.3
-usedevelop = True
-deps =
-    Django == 1.5.10
-
-[testenv:py33-1.6]
-basepython = python3.3
-usedevelop = True
-deps =
-    Django == 1.6.7
-
-[testenv:py33-1.7]
-basepython = python3.3
-usedevelop = True
-deps =
-    Django == 1.7
-
-[testenv:py33-trunk]
-basepython = python3.3
-usedevelop = True
-deps =
-    https://github.com/django/django/archive/master.zip
-
-[testenv:pypy-1.5]
-basepython = pypy
-usedevelop = True
-deps =
-    Django == 1.5.10
-
-[testenv:pypy-1.6]
-basepython = pypy
-usedevelop = True
-deps =
-    Django == 1.6.7
-
-[testenv:pypy-1.7]
-basepython = pypy
-usedevelop = True
-deps =
-    Django == 1.7
-
-[testenv:pypy-trunk]
-basepython = pypy
-usedevelop = True
-deps =
-    https://github.com/django/django/archive/master.zip
+    dj18: Django>=1.8,<1.9
+    dj19: Django>=1.9,<1.10
+    dj110: Django>=1.10,<1.11
